Se corrigio el label desplazado(Post).

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="row">
                 <div class="six columns anek-tamil-regular flex">
-                    <label for="post">Post</label>
+                    <label for="post" class="u-full-width">Post</label>
                     <form  id="formulario" class="anek-tamil-regular flex justify-end">
                             <label for="post"></label>
                             <textarea id="post" class="u-full-width"></textarea>
