--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="container">
 
             <div class="row">
-                <div class="six columns anek-tamil-regular flex">
+                <div class="six columns anek-tamil-regular flex" id="contenedor-post">
                     <label for="post" class="u-full-width">Post</label>
-                    <form  id="formulario" class="anek-tamil-regular flex justify-end">
+                    <form  id="formulario" class="anek-tamil-regular flex justify-end u-full-width">
                             <label for="post"></label>
                             <textarea id="post" class="u-full-width"></textarea>
                             <input type="submit" class="button flex text-default" value="Crear tu post!">
